20250115_taniguchi_add_keyword

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -15,6 +15,8 @@
           photo: b_01.jpg  
       abstract: |-
         KubeVirtは、Kubernetesクラスタで仮想マシンを作成・管理する仕組みです。本セッションでは、KubeVirtにおいてネットワークがどのように構成されるか、従来の仮想化との違い等についての解説をします。
+
+        キーワード: **KubeVirt**, **Kubernetes**, **k8s**, **network**, **tunnel**
       slides:
         - file: 2024_B_01_RedHat_Ori.pdf
     - title: 休憩
@@ -51,6 +53,8 @@
           photo: b_03.JPG
       abstract: |-
         ONIC 2024では多くのOT, IoT, IIoTに関するセッションを準備しています. OTのネットワークってなんとなくわかっているけど, 具体的には触れたことがない方も多いと思います. 本セッションでは, 明日の予習としてOTの基礎知識に触れたいと思います.
+
+        キーワード: **OT**, **セキュリティ**, **産業制御**, **ICS**
       slides:
         - file: 2024_B_03_bof_hashiken.pdf
     - title: 閉会
@@ -76,6 +80,8 @@
           photo: s_01.jpg
       abstract: |-
         Starlinkの登場でネットワークは大きく拡大しました。本講演では利用者視点で調査しましたので活用方法を探りたいと思います。
+
+        キーワード: **Starlink**, **低軌道衛星通信**, **フェーズドアレイアンテナ**, **Starlink購入ガイド**
       slides:
         - file: 2024_S_01_IIJ-Taniguchi.pdf
     - title: Outshift by Ciscoのご紹介
@@ -125,6 +131,8 @@
           photo: s_04.jpg            
       abstract: |-
         NECグループでは、工場セキュリティについて「セキュア生産」というコンセプトで試行錯誤を進めてきました。この取組みの内容や、取組から見えてきた課題など工場セキュリティの現実についてご紹介します。
+
+        キーワード: **OT**, **工場**, **セキュリティ**, **ICS**, **産業制御**
     - title: 新たなICT基盤「DCI」におけるデータ処理・通信の制御のためのK8sコントローラ開発の取り組み
       time: "14:00"
       type: スポンサーセッション
@@ -151,6 +159,8 @@
           photo: s_06.jpg            
       abstract: |-
         様々な社会課題の中、建設業でもオープン化の取り組みが加速しています。本講演では、スマートビルの事例を交えながら、生産性向上を目指す「オープンBIM」、建物の魅力を維持するための「ビルOS」、データドリブンな建物を実現する「デジタルツイン」に関する最新の取り組みをご紹介します。
+
+        キーワード: **OT**, **ビルコミ**, **BIM(Building Information Modeling)**, **配達ロボット**
       slides:
         - file: 2024_S_06_Takenaka_Masai.pdf
     - title: 休憩
@@ -166,6 +176,8 @@
           photo: s_07.jpg
       abstract: |-
         我が国はエネルギーの大半を輸入に依存しており、経済安全保障が重要な課題となっている。 また、再生可能エネルギーの利用が求められる一方、需要と供給のタイミングが合わず多くの再エネが破棄されている。 これらの破棄される再エネを計算需要とマッチさせるために、全国に分散コンピューティング基盤を構築しフィールドでの効果検証を進めている。 具体的には、沖縄に設置したコンテナ型データセンターを用いた実験ネットワークの構築や、 自社で開発した太陽光発電シミュレーターと計算基盤管理システムの統合による再エネ効率利用の実証、 また風力発電の近くに設置した蓄電設備への計算資源の導入による再エネを100%利用した分散コンピューティング基盤の設置計画している。 これら、グリーンな計算資源を積極的に利用する取り組みについて述べる。
+
+        キーワード: **トヨタ**, **省エネ**, **再エネ**, **グリーンエネルギー**, **電力**, **データセンタ**
       slides:
         - file: 2024_S_07_toyota_abe.pdf
     - title: 何故今時 TCP/IP スタックを新しく実装しようとするのか
@@ -179,6 +191,8 @@
           photo: s_08.jpg
       abstract: |-
         IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
+
+        キーワード: **tcp**, **ip**, **integratable**, **stack**, **実装**, **カーネル**, **性能**, **10Gbps**, **アプリ開発**, **便利**
       slides:
         - file: 2024_S_08_IIJ_KeniciYasugata.pdf
     - title: 休憩
@@ -205,6 +219,8 @@
           photo: s_10.png
       abstract: |-
         国産OT-IDS「OsecT」を軸とした、NTTコミュニケーションズにおける制御システムセキュリティの取り組みを紹介します。
+
+        キーワード: **OT**, **セキュリティ**, **ICS**, **産業制御**, **PLC**, **SCADA**, **DCS**
       slides:
         - file: 2024_S_10_NTT_Communications_Corporation_Shingo_Kashima.pdf
     - title: Interop Tokyo 2024 ShowNetにおけるルーティング技術による多様なネットワーク環境の統合
@@ -218,6 +234,8 @@
           photo: s_10.jpeg            
       abstract: |-
         ShowNetは、インターネットテクノロジーイベント”Interop Tokyo”において構築される、世界最大のデモンストレーションネットワークです。2024年のShowNetバックボーンは、マルチベンダーによるuSIDを用いたSRv6およびEVPN/VXLANによって構築され、多数のユーザや大量のトラフィックに耐えるネットワークとして会場のトラフィックを収容しました。本講演では、このShowNetバックボーンや、衛星回線をSRv6によってシームレスに統合するといった取り組みについて、知見や課題を交えて紹介します。
+
+        キーワード: **EVPN**, **VXLAN**, **衛星インターネット**, **SRv6**, **ShowNet**
       slides:
         - file: 2024_S_11_s_shownet2024_malo.pdf
     - title: 閉会の挨拶
