--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -1,246 +1,52 @@
-- date: October 10, 2024 (BoF＠ホワイエ)
+- date: MONTH DAY, YEAR (TYPE@VENUE)
   sessions:
     - title: 受付開始
-      time: "17:45"
+      time: "HH:MM"
     - title: 開会
       time: ""      
-    - title: "KubeVirt Networking"
-      time: "18:00"
+    - title: "SESSION TITLE"
+      time: "HH:MM"
       type: BoF
-      tag: b_01
+      tag: UNIQUE_TAG_1
       presenters:
         - name_and_title: |-
-            Red Hat<br />
-            織 学
-          photo: b_01.jpg  
+            ORGANIZATION<br />
+            NAME
+          photo: placeholder-120x140.png
       abstract: |-
-        KubeVirtは、Kubernetesクラスタで仮想マシンを作成・管理する仕組みです。本セッションでは、KubeVirtにおいてネットワークがどのように構成されるか、従来の仮想化との違い等についての解説をします。
+        WHATEVER SUBMITTED BY THE PRESENTER(s).
 
-        キーワード: **KubeVirt**, **Kubernetes**, **k8s**, **network**, **tunnel**
+        キーワード: **FOO**, **BAR**, **BAZ**
       slides:
-        - file: 2024_B_01_RedHat_Ori.pdf
-    - title: 休憩
-      time: "18:30"        
-    - title: クラウドネイティブな新しいOSSのネットワークコントローラ『K-SOT』の３年間の進化と実用化に向けた取り組み
-      time: "19:00"
-      type: BoF
-      tag: b_02
-      presenters:
-        - name_and_title: |-
-            NTTコミュニケーションズ<br />
-            坂井 立晟
-          photo: b_02_1.JPG
-        - name_and_title: |-
-            NTTコミュニケーションズ<br />
-            為末 航平
-          photo: b_02_2.JPG
-      abstract: |-
-        ONIC2023で発表したクラウドネイティブ技術を活用したOSSのＮＷコントローラ『Kuesta』は2022、2023、2024年と進化を続けており、今年度にはK-SOT（ケー・ソット）とリネームを行い、次年度の社内導入を狙って着々と開発を続けている。本発表ではONIC2023からの進化内容、現状の開発状況、次年度以降の導入ターゲットについて紹介する。
-
-        キーワード: **K-SOT**, **Kubernetes**, **github**, **宣言的**, **NWコントローラー**
-      slides:
-        - file: 2024_B_01_NTT_Communications_Corporation_Tatsuki_Sakai_Kohei_Tamesue.pdf
-    - title: 歓談
-      time: "19:30"        
-    - title: ONIC実行委員より, 明日の予習としての座学
-      time: "20:00"
-      type: BoF
-      tag: b_03
-      presenters:
-        - name_and_title: |-
-            Nozomi Networks
-            橋本 賢一郎
-          photo: b_03.JPG
-      abstract: |-
-        ONIC 2024では多くのOT, IoT, IIoTに関するセッションを準備しています. OTのネットワークってなんとなくわかっているけど, 具体的には触れたことがない方も多いと思います. 本セッションでは, 明日の予習としてOTの基礎知識に触れたいと思います.
-
-        キーワード: **OT**, **セキュリティ**, **産業制御**, **ICS**
-      slides:
-        - file: 2024_B_03_bof_hashiken.pdf
-    - title: 閉会
-      time: "20:30"
-- date: October 11, 2024 (本会議@メインホール)
+        - file: SLIDE.pdf
+- date: MONTH DAY, YEAR (TYPE@VENUE)
   sessions:
     - title: 受付開始
-      time: "10:00"
+      time: "HH:MM"
     - title: 開会の挨拶
-      time: "10:25"
+      time: "HH:MM"
       presenters:
         - name_and_title: |-
-            ONIC Japan 実行委員会委員長<br />
-            境 智史
-    - title: Starlinkがやってきたのでネットワークを色々調べました
-      time: "10:30"
+            ORGANIZATION<br />
+            NAME
+    - title: SESSION TITLE
+      time: "HH:MM"
       type: 講演
-      tag: s_01
+      tag: UNIQUE_TAG_2
       presenters:
         - name_and_title: |-
-            株式会社インターネットイニシアティブ<br />
-            谷口 崇
-          photo: s_01.jpg
+            ORGANIZATION<br />
+            NAME
+          photo: placeholder-120x140.png
       abstract: |-
-        Starlinkの登場でネットワークは大きく拡大しました。本講演では利用者視点で調査しましたので活用方法を探りたいと思います。
+        WHATEVER SUBMITTED BY THE PRESENTER(s).
 
-        キーワード: **Starlink**, **低軌道衛星通信**, **フェーズドアレイアンテナ**, **Starlink購入ガイド**
+        キーワード: **FOO**, **BAR**, **BAZ**
       slides:
-        - file: 2024_S_01_IIJ-Taniguchi.pdf
-    - title: Outshift by Ciscoのご紹介
-      time: "11:00"
-      type: スポンサーセッション
-      tag: s_05
-      presenters:
-        - name_and_title: |-
-            シスコシステムズ合同会社
-            小倉 隆啓
-          photo: s_05.png            
-      abstract: |-
-        Outshift by Ciscoは未来を切り開く新しい技術を市場に送り出すために設立された部門です。 本セッションではCloud native、GenAIやQuantumなど、Outshiftの革新的な取り組みについてご紹介いたします。 セッションを通じて皆様にCiscoのイノベーションをともに感じていただき、お楽しみいただくことを目標としてます。
-
-        キーワード: **Outshift**, **Panoptica**, **量子ネットワーク**
-      slides:
-        - file: 2024_S_2_Cisco_Systems_GK_Takahro_Ogura.pdf
-    - title: L5G/P5G on Hybrid Cloudの取り組み
-      time: "11:30"
-      type: 講演
-      tag: s_03
-      presenters:
-        - name_and_title: |-
-            NTTコミュニケーションズ株式会社<br />
-            藤田 康寛
-          photo: s_03_1.jpg           
-        - name_and_title: |-
-            NTTコミュニケーションズ株式会社<br />
-            内藤 憲吾
-          photo:  s_03_2.jpg     
-      abstract: |-
-        Local/Public 5G市場の活性化により、ネットワークファンクションの設置場所に関する要望が多様化しています。 自動化や運用効率化の観点からクラウド上に設置するケース、セキュリティや通信速度の観点からオンプレミスに設置するケースなどが考えられます。 本発表では、オンプレミス環境でクラウド機能を提供するHybrid Cloudソリューションを利用した5Gの実現性について、技術的・ビジネス的な観点から紹介します。
-
-        キーワード: **L5G**, **P5G**, **Hybrid Cloud**, **自動化**, **CI/CD**
-      slides:
-        - file: 2024_S_3_NTT_Communications_Corporation_Yasuhiro_Fujita_Kengo_Naito.pdf
-    - title: 休憩
-      time: "12:00"           
-    - title: 工場に求められるセキュリティ「セキュア生産」の取組み
-      time: "13:30"
-      type: 講演
-      tag: s_04
-      presenters:
-        - name_and_title: |-
-            日本電気株式会社
-            淵上 真一
-          photo: s_04.jpg            
-      abstract: |-
-        NECグループでは、工場セキュリティについて「セキュア生産」というコンセプトで試行錯誤を進めてきました。この取組みの内容や、取組から見えてきた課題など工場セキュリティの現実についてご紹介します。
-
-        キーワード: **OT**, **工場**, **セキュリティ**, **ICS**, **産業制御**
-    - title: 新たなICT基盤「DCI」におけるデータ処理・通信の制御のためのK8sコントローラ開発の取り組み
-      time: "14:00"
-      type: スポンサーセッション
-      tag: s_02
-      presenters:
-        - name_and_title: |-
-            富士通株式会社<br />
-            阿部 仁彦
-          photo:  s_02.png           
-      abstract: |-
-        富士通は、これからの時代に求められる高効率・低消費電力の特徴を有する新たなICT基盤である、DCI（Data Centric Infrastructure）の研究開発を行っています 。このDCIの活用に向けては、DCIの豊富なリソースを組み合わせたデータ処理・通信を最適にオーケストレーションするための仕組みが必要となります。そこで我々が開発しているのが、GPU/FPGA等のアクセラレータを活用したAIワークロードにおける、データ処理・通信の制御を容易化するK8sコントローラです。このセッションでは、我々のこれまでのK8sコントローラ開発の取り組みと、実用化に向けた今後の展望についてお話しします。
-
-        キーワード: **DCI**, **Kubernetes**, **コントローラ**
-      slides:
-        - file: 2024_S_5_Fujitsu_Limited_Kimihiko_Abe.pdf
-    - title: スマートビルに見るオープン化の取り組み　～BIM・ビルOS・デジタルツイン～
-      time: "14:30"
-      type: 講演
-      tag: s_06
-      presenters:
-        - name_and_title: |-
-            株式会社竹中工務店
-            政井 竜太
-          photo: s_06.jpg            
-      abstract: |-
-        様々な社会課題の中、建設業でもオープン化の取り組みが加速しています。本講演では、スマートビルの事例を交えながら、生産性向上を目指す「オープンBIM」、建物の魅力を維持するための「ビルOS」、データドリブンな建物を実現する「デジタルツイン」に関する最新の取り組みをご紹介します。
-
-        キーワード: **OT**, **ビルコミ**, **BIM(Building Information Modeling)**, **配達ロボット**
-      slides:
-        - file: 2024_S_06_Takenaka_Masai.pdf
-    - title: 休憩
-      time: "15:00"           
-    - title: グリーンな計算資源を積極的に利用する取り組み
-      time: "15:30"
-      type: 講演
-      tag: s_07
-      presenters:
-        - name_and_title: |-
-            トヨタ自動車株式会社<br />
-            阿部 博    
-          photo: s_07.jpg
-      abstract: |-
-        我が国はエネルギーの大半を輸入に依存しており、経済安全保障が重要な課題となっている。 また、再生可能エネルギーの利用が求められる一方、需要と供給のタイミングが合わず多くの再エネが破棄されている。 これらの破棄される再エネを計算需要とマッチさせるために、全国に分散コンピューティング基盤を構築しフィールドでの効果検証を進めている。 具体的には、沖縄に設置したコンテナ型データセンターを用いた実験ネットワークの構築や、 自社で開発した太陽光発電シミュレーターと計算基盤管理システムの統合による再エネ効率利用の実証、 また風力発電の近くに設置した蓄電設備への計算資源の導入による再エネを100%利用した分散コンピューティング基盤の設置計画している。 これら、グリーンな計算資源を積極的に利用する取り組みについて述べる。
-
-        キーワード: **トヨタ**, **省エネ**, **再エネ**, **グリーンエネルギー**, **電力**, **データセンタ**
-      slides:
-        - file: 2024_S_07_toyota_abe.pdf
-    - title: 何故今時 TCP/IP スタックを新しく実装しようとするのか
-      time: "16:00"
-      type: スポンサーセッション
-      tag: s_08
-      presenters:
-        - name_and_title: |-
-            株式会社インターネットイニシアティブ 技術研究所<br />
-            安形 憲一
-          photo: s_08.jpg
-      abstract: |-
-        IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
-
-        キーワード: **tcp**, **ip**, **integratable**, **stack**, **実装**, **カーネル**, **性能**, **10Gbps**, **アプリ開発**, **便利**
-      slides:
-        - file: 2024_S_08_IIJ_KeniciYasugata.pdf
-    - title: 休憩
-      time: "16:30"           
-    - title: （続）おとぎの国の DX
-      time: "17:00"
-      type: 講演
-      tag: s_09
-      presenters:
-        - name_and_title: |-
-            東京大学
-            関谷 勇司
-          photo: s_09.jpg            
-      abstract: |-
-        ONIC 2022 にて、おとぎの国の DX 推進に関するお話をさせて頂きました。その後についていくつかお問い合わせがありましたが、あくまでも私が想い描くおとぎの国の DX 推進でしたので、お答えしておりませんでした。そこで今回、おとぎの国がその後どうなったのか、私の多大なる妄想を元にお話させて頂ければと思います。
-    - title: NTTコミュニケーションズにおける制御システムセキュリティの取組み
-      time: "17:30"
-      type: スポンサーセッション
-      tag: s_10
-      presenters:
-        - name_and_title: |-
-            NTTコミュニケーションズ株式会社<br />
-            加島 伸悟
-          photo: s_10.png
-      abstract: |-
-        国産OT-IDS「OsecT」を軸とした、NTTコミュニケーションズにおける制御システムセキュリティの取り組みを紹介します。
-
-        キーワード: **OT**, **セキュリティ**, **ICS**, **産業制御**, **PLC**, **SCADA**, **DCS**
-      slides:
-        - file: 2024_S_10_NTT_Communications_Corporation_Shingo_Kashima.pdf
-    - title: Interop Tokyo 2024 ShowNetにおけるルーティング技術による多様なネットワーク環境の統合
-      time: "18:00"
-      type: 講演
-      tag: s_11
-      presenters:
-        - name_and_title: |-
-            スカパーJSAT株式会社 / Interop Tokyo 2024 ShowNet NOCチームメンバー
-            廣瀬 真人
-          photo: s_10.jpeg            
-      abstract: |-
-        ShowNetは、インターネットテクノロジーイベント”Interop Tokyo”において構築される、世界最大のデモンストレーションネットワークです。2024年のShowNetバックボーンは、マルチベンダーによるuSIDを用いたSRv6およびEVPN/VXLANによって構築され、多数のユーザや大量のトラフィックに耐えるネットワークとして会場のトラフィックを収容しました。本講演では、このShowNetバックボーンや、衛星回線をSRv6によってシームレスに統合するといった取り組みについて、知見や課題を交えて紹介します。
-
-        キーワード: **EVPN**, **VXLAN**, **衛星インターネット**, **SRv6**, **ShowNet**
-      slides:
-        - file: 2024_S_11_s_shownet2024_malo.pdf
+        - file: SLIDE.pdf            
     - title: 閉会の挨拶
-      time: "18:30"
+      time: "HH:MM"
       presenters:
         - name_and_title: |-
-            ONIC実行委員会<br />
-            浅羽 登志也
+            ORGANIZATION<br />
+            NAME
