--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -4,3 +4,6 @@
     - name: 株式会社インターネットイニシアティブ
       profile: https://www.iij.ad.jp/
       logo: IIJ-ONIC.png
+    - name: NTTドコモビジネス株式会社
+      profile: https://www.ntt.com/index.html
+      logo: docombus_ONIC.png
