--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -3,7 +3,57 @@
     - title: 受付開始
       time: "17:45"
     - title: 開会
-      time: "17:55"      
+      time: "17:55"
+    - title: スマートビルについて（その技術的側面と発展、普及活動について）
+      time: "18:00"
+      type: BoF
+      tag: b_01
+      presenters:
+        - name_and_title: |-
+            株式会社竹中工務店
+            粕谷 貴司
+#          photo: b_01-takashi_kasuya.jpg
+      abstract: |-
+        調整中
+
+        キーワード: **SmartBuilding**, **Technical**, **Activity**      
+    - title: オープンソース半導体を研究ツールとして利用しよう！
+      time: "18:30"
+      type: BoF
+      tag: b_02
+      presenters:
+        - name_and_title: |-
+            ISHI会
+            今村 謙之
+#          photo: b_2-noritsuna_imamura.jpg
+      abstract: |-
+        ここ数年で盛り上がってきたオープンソース半導体を利用して、今まででは考えられなかった額でオリジナルASIC設計・製造して研究に利用してみませんか？
+        FPGA処理だけでは実現出来ないような処理を実現したり、超小型に出来るため市販のIoTデバイスでは出来ないことを実現出来ます！
+        今まで、お値段的に諦めていたチップ化（ASIC化）をお手頃なお値段で実現する方法や実例をお話しします。
+
+        キーワード: **OpenSource**, **Semiconductor**, **ASIC**
+    - title: 休憩
+      time: "19:00"
+    - title: 究極のゼロトラストを目指して
+      time: "19:30"
+      type: BoF
+      tag: b_03
+      presenters:
+        - name_and_title: |-
+            IoT-EX株式会社
+            小畑 至弘
+#          photo: b_3-yoshihiro_obata.jpg
+      abstract: |-
+        近年、サイバーセキュリティの世界では境界防衛を脱却し、ゼロトラストでセキュリティを守ることが推奨されています。
+        しかしながら、フィッシングやユーザによる不適切な利用を防ぐことはゼロトラストでさえカバーしきれません。
+        このようにサイバー空間の管理が非常に困難になりつつある中で、正社員比率や終身雇用比率はどんどんと減っていっており、
+        利用者や関係者による不適切な利用はよりやり易くなってきています。
+        また、オーバープロテクションによるプライバシーの侵害も大きな問題です。
+        そこで、時間や位置情報などの状況やコンテキストを用いることによりコンピュータリソースへのアクセスを制限するという
+        context-awaresecurityという考え方が広がってきています。
+        本セッションではこのような考え方に基づいて空港や建設現場などにおいて実際にスマホやタブレットの利用を制限している実例を紹介します。
+
+        キーワード: **ZeroTrust**, **Security**, **IoT**
     - title: ネットワーク仮想化の歴史
       time: "20:00"
       type: BoF
@@ -11,7 +61,7 @@
       presenters:
         - name_and_title: |-
             ヴイエムウェア（株）/ Broadcom<br />
-            進藤資訓
+            進藤 資訓
           photo: Motonori_Shindo.jpg
       abstract: |-
         SDNのパイオニアだったNiciraは何をやりたかったのか、
@@ -21,6 +71,7 @@
         キーワード: **SDN**, **Nicira**, **NSX**
     - title: 閉会
       time: "20:30"
+
 - date: November 7, 2025 (本会議@メインホール)
   sessions:
     - title: 受付開始
@@ -37,15 +88,15 @@
       tag: s_01
       presenters:
         - name_and_title: |-
-            ORG-A<br />
-            Presenter-1
-          photo: placeholder-120x140.png
+            Hardning Security（調整中）<br />
+            Hardning Project （調整中）
+          photo: s_01.png
       abstract: |-
-        TBD
+        （調整中）
 
-        キーワード: **keyword-1**, **keyword-2**, **keyword-3**       
-      slides:
-        - link: https://www.onic.jp
+        キーワード: **Hardning**, **Security**, **Project**       
+#      slides:
+#        - link: https://www.onic.jp
     - title: 休憩
       time: "12:00"           
     - title: 閉会の挨拶
