--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -82,26 +82,243 @@
         - name_and_title: |-
             ONIC Japan 実行委員会委員長<br />
             境 智史
-    - title: TBD
+    - title: 調整中
       time: "10:30"
       type: 講演
       tag: s_01
       presenters:
         - name_and_title: |-
-            Hardning Security（調整中）<br />
-            Hardning Project （調整中）
-          photo: s_01.png
+            title: Hardning Security（調整中）<br />
+            name: Hardning Project （調整中）
+#          photo: s_01.png
       abstract: |-
-        （調整中）
+        abstract: 調整中
 
         キーワード: **Hardning**, **Security**, **Project**       
 #      slides:
 #        - link: https://www.onic.jp
+    - title: 調整中
+      time: "11:00"
+      type: スポンサーセッション
+      tag: s_02
+      presenters:
+        - name_and_title: |-
+            title: 調整中<br />
+            name: 調整中
+#          photo: s_02.png
+      abstract: |-
+        abstract: 調整中
+
+        キーワード: **ONIC**, **ONIC**, **ONIC**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: ICTトラブルシューティングコンテストの舞台裏 - 持続可能な技術コミュニティづくりを目指して
+      time: "11:30"
+      type: 講演
+      tag: s_03
+      presenters:
+        - name_and_title: |-
+            NTTセキュリティ・ジャパン株式会社<br />
+            桑原 悠太
+#          photo: s_03.png
+      abstract: |-
+        ICTトラブルシューティングコンテスト(ICTSC)は、ICT分野における障害を模した課題を通じて、学生がトラブルシューティング力を競う実践型コンテストです。 
+        学生主体の運営を社会人が支え、協賛企業にも協力いただくことで、次世代エンジニアの育成と技術コミュニティの形成を進めてきました。 
+        本発表では、ICTSCの歴史や組織体制を紹介しつつ、社会人実行委員の立場から運営の工夫や課題を共有します。
+        そのうえで、持続可能な技術コミュニティづくりに向けた展望を提示し、参加者とともに議論を深めます。
+
+        キーワード: **ICTトラブルシューティングコンテスト**, **技術イベント運営**, **技術者育成**, **技術コミュニティ形成**       
+#      slides:
+#        - link: https://www.onic.jp
     - title: 休憩
       time: "12:00"           
-    - title: 閉会の挨拶
+    - title: 分散したコンピューティングリソースの活用について
+      time: "13:30"
+      type: 講演
+      tag: s_04
+      presenters:
+        - name_and_title: |-
+            トヨタ自動車株式会社<br />
+            阿部 博
+#          photo: s_04.png
+      abstract: |-
+        GPU基盤が多くの企業により構築されている。GPU基盤は規模が大きくなると大量の電力を必要とする。 
+        都心で大きな電力を賄うことが難しくなり、郊外・地方の電力を求め基盤が広く分散され始めている。 
+        さらに、電力の効率化やグリーン電力を積極利用することで、大量に消費される電力を賄う試みも多数行われている。 
+        なぜ分散しないといけないのか、そのためにはどのような効率的な分散基盤が必要なのかについてのトヨタのR&D活動について解説する。
+
+        キーワード: **AI**, **GPU基盤**,, **Kubernetes**, **グリーン電力**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 脱・テキストベースの管理 ― 内製で挑むIPアドレス管理システムの取り組み
+      time: "14:00"
+      type: スポンサーセッション
+      tag: s_05
+      presenters:
+        - name_and_title: |-
+            株式会社インターネットイニシアティブ<br />
+            田中 義久
+#          photo: s_05.png
+      abstract: |-
+        社内に散在するテキストベースのIPアドレス管理台帳を統合し、正確な管理と業務効率の向上、
+        IPアドレスと付随データの利活用を実現するためにIPアドレス管理システムを内製しました。
+        本講演では、内製に至った背景からシステム化によって解決したことと将来の展望、管理台帳移行時に直面した苦労話などを紹介します。
+
+        キーワード: **内製**, **IPアドレス**, **管理**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 調整中
+      time: "14:30"
+      type: 講演
+      tag: s_06
+      presenters:
+        - name_and_title: |-
+            title: 調整中<br />
+            name: 調整中
+#          photo: s_06.png
+      abstract: |-
+        abstract: 調整中
+
+        キーワード: **ONIC**, **ONIC**, **ONIC**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 休憩
+      time: "15:00"           
+      type: 演奏
+      tag: p_01
+      presenters:
+        - name_and_title: |-
+            岡 優里<br />
+          photo: p_01.jpg
+      abstract: |-
+        千葉県出身｡東京音楽大学ピアノ科を卒業後､同大学大学院修士課程伴奏科を修了｡
+        4歳よりピアノを始め､9歳からは吹奏楽部にてクラリネットを学ぶ｡こうした経験を活かし､現在は主に管楽器との共演を中心に､伴奏ピアニストとして活動している｡
+        これまでに､東京音楽大学創立115周年特別演奏会｢吹奏楽のチカラ｣や､吹奏楽団｢粋吹 -ibuki-｣の演奏会にてピアノパートを務める｡
+        第33回千葉ピアノコンクール優秀賞､第35回同コンクール奨励賞を受賞｡2023年度にはピアノ学内卒業演奏会にも出演｡
+        また､2024年よりオペラ作品にも積極的に取り組んでおり､6月には若手オペラプロジェクト Volareopera による《ドン・パスクワーレ》にピアノとして出演予定｡
+        現在､佐藤俊氏､服部容子氏に師事｡
+
+        キーワード: **岡優里**, **ピアノ**, **演奏**, **A社長**       
+    - title: 技術の総合格闘技！？AIインフラの現在と未来。
+      time: "15:30"
+      type: 講演
+      tag: s_07
+      presenters:
+        - name_and_title: |-
+            Arrcus, Inc.<br />
+            海老澤 健太郎
+#          photo: s_07.png
+      abstract: |-
+        生成AIを中心としたAIサービスは、今やハイパースケーラーのみならず幅広い企業にとって不可欠な技術となっています。
+        その基盤を支えるAIインフラは、学習（Training）においては数万から数十万規模のGPUを連携させる必要があり、常に進化を続けています。
+        一方で、コーディングエージェントなどの技術者向けサービスだけでなく、一般消費者がお悩み相談に利用するなど、様々な ”AIサービス” が急速に普及しており、
+        高速な推論（Inference）の重要性も高まりつつあります。
+        また、GPUaaSを含むサービス提供事業者、企業内での利用、など、ビジネスモデルや利用主体によって、ハイパースケーラーとは異なる課題への対応が求められています。
+        これらのニーズを満たすシステムを構築・運用するためには、急速に進歩するハードウェアやソフトウェアを俯瞰的に理解し、最適な技術・設計・製品を選択する力が不可欠です。
+        本講演では、現在のAIインフラを構成する技術と課題、そして将来に向け提案されている技術などを紹介し、我々が今後どのような視点でAIインフラ技術に向き合うべきかを議論します。
+
+        キーワード: **AI**, **RoCE**, **GPU**, **UEC**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 調整中
+      time: "16:00"
+      type: スポンサーセッション
+      tag: s_08
+      presenters:
+        - name_and_title: |-
+            シスコシステムズ合同会社 <br />
+            name: 調整中
+#          photo: s_08.png
+      abstract: |-
+        abstract: 調整中
+
+        キーワード: **ONIC**, **ONIC**, **ONIC**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 30分で理解する生成AI 最新技術動向と今後の要点
+      time: "16:30"
+      type: 講演
+      tag: s_09
+      presenters:
+        - name_and_title: |-
+            NTTドコモビジネス株式会社<br />
+            岩瀬 義昌
+#          photo: s_09.png
+      abstract: |-
+        2025年11月現在も生成AIの進化は続いています。生成AIの影響はあらゆるレイヤに及んでおり、その技術動向や仕組みの理解が重要です。
+        そこで本講演では2025年11月時点の最新動向と、特に意識すべき要点を紹介します。
+
+        キーワード: **生成AI**, **最新動向**, **留意すべき要点**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: 休憩
+      time: "17:00"           
+      type: 演奏
+      tag: p_02
+      presenters:
+        - name_and_title: |-
+            岡 優里<br />
+          photo: p_01.jpg
+      abstract: |-
+
+        キーワード: **岡優里**, **ピアノ**, **演奏**, **A社長**      
+    - title: BOSCOのAIOps
+      time: "17:30"
+      type: 講演
+      tag: s_10
+      presenters:
+        - name_and_title: |-
+            株式会社ボスコ・テクノロジーズ<br />
+            林 經正
+#          photo: s_10.png
+      abstract: |-
+        abstract: 調整中
+
+        キーワード: **ONIC**, **ONIC**, **ONIC**       
+#      slides:
+#        - link: https://www.onic.jp
+    - title: SIMアプレットによる"使いやすい"ローカル5G実現への取り組み
+      time: "18:00"
+      type: スポンサーセッション
+      tag: s_11
+      presenters:
+        - name_and_title: |-
+            NTTドコモビジネス株式会社<br />
+            山田 悠也
+#          photo: s_11.png
+      abstract: |-
+        SIMアプレットは、SIMカードの中で動作する小さなプログラムです。
+        SIMカードのもつセキュリティ性の高さやUEへの依存性の少なさといった特長を活かすことができるため、
+        様々なユースケースへの利活用が期待できます。本発表ではSIMアプレット技術の基礎を説明します。
+        さらに、この技術を利用することでローカル5Gの運用上の課題を解消し、今までにないローカル5Gの付加価値創造を目指す取り組みを紹介します。
+
+        キーワード: **SIMアプレット**, **ローカル5G**      
+#      slides:
+#        - link: https://www.onic.jp
+    - title: ShowNet 2025から見る相互接続性と生成AI活用の今とこれから
       time: "18:30"
+      type: 講演
+      tag: s_12
+      presenters:
+        - name_and_title: |-
+            東京大学<br />
+            中村 遼
+#          photo: s_12.png
+      abstract: |-
+        ShowNetは、ネットワーク技術関する展示会、Interop Tokyoの会場に構築される世界最大のデモンストレーションネットワークです。
+        例年にもれず、2025年のShowNetもSRv6からEVPNをはじめ、様々な技術が詰め込まれた複雑なネットワークとなりました。
+        このとても複雑なShowNetを構築するにあたって、今年は生成AIを活用したネットワークの構築・運用支援実験も実施しました。
+        本講演では、2025年のShowNetが取り組んだ技術をハイライトするとともに、生成AIがShowNetの構築にどのように役に立ったかを紹介し、
+        今後のネットワークにおける生成AIの活用の道筋について議論します。
+
+        キーワード: **ルーティング**, **相互接続性**, **生成AI** 
+#      slides:
+#        - link: https://www.onic.jp        
+    - title: 閉会の挨拶
+      time: "19:00"
       presenters:
         - name_and_title: |-
             ONIC実行委員会<br />
-            浅羽 登志也
+            浅羽 登志也    
+    - title: 懇親会
+      time: "19:30"
