--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -12,7 +12,7 @@
         - name_and_title: |-
             株式会社竹中工務店
             粕谷 貴司
-#          photo: b_01-takashi_kasuya.jpg
+#          photo: b_01.jpg
       abstract: |-
         調整中
 
@@ -25,7 +25,7 @@
         - name_and_title: |-
             ISHI会
             今村 謙之
-#          photo: b_2-noritsuna_imamura.jpg
+#          photo: b_2.jpg
       abstract: |-
         ここ数年で盛り上がってきたオープンソース半導体を利用して、今まででは考えられなかった額でオリジナルASIC設計・製造して研究に利用してみませんか？
         FPGA処理だけでは実現出来ないような処理を実現したり、超小型に出来るため市販のIoTデバイスでは出来ないことを実現出来ます！
@@ -42,7 +42,7 @@
         - name_and_title: |-
             IoT-EX株式会社
             小畑 至弘
-#          photo: b_3-yoshihiro_obata.jpg
+#          photo: b_3.jpg
       abstract: |-
         近年、サイバーセキュリティの世界では境界防衛を脱却し、ゼロトラストでセキュリティを守ることが推奨されています。
         しかしながら、フィッシングやユーザによる不適切な利用を防ぐことはゼロトラストでさえカバーしきれません。
@@ -120,7 +120,7 @@
         - name_and_title: |-
             NTTセキュリティ・ジャパン株式会社<br />
             桑原 悠太
-#          photo: s_03.JPG
+          photo: s_03.JPG
       abstract: |-
         ICTトラブルシューティングコンテスト(ICTSC)は、ICT分野における障害を模した課題を通じて、学生がトラブルシューティング力を競う実践型コンテストです。 
         学生主体の運営を社会人が支え、協賛企業にも協力いただくことで、次世代エンジニアの育成と技術コミュニティの形成を進めてきました。 
@@ -140,7 +140,7 @@
         - name_and_title: |-
             トヨタ自動車株式会社<br />
             阿部 博
-#          photo: s_04.png
+          photo: s_04.png
       abstract: |-
         GPU基盤が多くの企業により構築されている。GPU基盤は規模が大きくなると大量の電力を必要とする。 
         都心で大きな電力を賄うことが難しくなり、郊外・地方の電力を求め基盤が広く分散され始めている。 
@@ -207,7 +207,7 @@
         - name_and_title: |-
             Arrcus, Inc.<br />
             海老澤 健太郎
-#          photo: s_07.JPG
+          photo: s_07.JPG
       abstract: |-
         生成AIを中心としたAIサービスは、今やハイパースケーラーのみならず幅広い企業にとって不可欠な技術となっています。
         その基盤を支えるAIインフラは、学習（Training）においては数万から数十万規模のGPUを連携させる必要があり、常に進化を続けています。
@@ -243,7 +243,7 @@
         - name_and_title: |-
             NTTドコモビジネス株式会社<br />
             岩瀬 義昌
-#          photo: s_09.avif
+          photo: s_09.avif
       abstract: |-
         2025年11月現在も生成AIの進化は続いています。生成AIの影響はあらゆるレイヤに及んでおり、その技術動向や仕組みの理解が重要です。
         そこで本講演では2025年11月時点の最新動向と、特に意識すべき要点を紹介します。
@@ -285,7 +285,7 @@
         - name_and_title: |-
             NTTドコモビジネス株式会社<br />
             山田 悠也
-#          photo: s_11.JPG
+          photo: s_11.JPG
       abstract: |-
         SIMアプレットは、SIMカードの中で動作する小さなプログラムです。
         SIMカードのもつセキュリティ性の高さやUEへの依存性の少なさといった特長を活かすことができるため、
@@ -303,7 +303,7 @@
         - name_and_title: |-
             東京大学<br />
             中村 遼
-#          photo: s_12.png
+          photo: s_12.png
       abstract: |-
         ShowNetは、ネットワーク技術関する展示会、Interop Tokyoの会場に構築される世界最大のデモンストレーションネットワークです。
         例年にもれず、2025年のShowNetもSRv6からEVPNをはじめ、様々な技術が詰め込まれた複雑なネットワークとなりました。
