s/休憩/ピアノ演奏/g

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -182,7 +182,7 @@
         キーワード: **ONIC**, **ONIC**, **ONIC**       
 #      slides:
 #        - link: https://www.onic.jp
-    - title: 休憩
+    - title: ピアノ演奏
       time: "15:00"           
       type: 演奏
       tag: p_01
@@ -251,7 +251,7 @@
         キーワード: **生成AI**, **最新動向**, **留意すべき要点**       
 #      slides:
 #        - link: https://www.onic.jp
-    - title: 休憩
+    - title: ピアノ演奏
       time: "17:00"           
       type: 演奏
       tag: p_02
