obata-san's photo added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -42,7 +42,7 @@
         - name_and_title: |-
             IoT-EX株式会社
             小畑 至弘
-#          photo: b_3.jpg
+          photo: Yoshihiro_Obata.jpg
       abstract: |-
         近年、サイバーセキュリティの世界では境界防衛を脱却し、ゼロトラストでセキュリティを守ることが推奨されています。
         しかしながら、フィッシングやユーザによる不適切な利用を防ぐことはゼロトラストでさえカバーしきれません。
