imabura-san's photo added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -25,7 +25,7 @@
         - name_and_title: |-
             ISHI会
             今村 謙之
-#          photo: b_2.jpg
+          photo: Noritsuna_Imamura.jpg
       abstract: |-
         ここ数年で盛り上がってきたオープンソース半導体を利用して、今まででは考えられなかった額でオリジナルASIC設計・製造して研究に利用してみませんか？
         FPGA処理だけでは実現出来ないような処理を実現したり、超小型に出来るため市販のIoTデバイスでは出来ないことを実現出来ます！
