kasuya-san's session abstract and photo added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -12,11 +12,13 @@
         - name_and_title: |-
             株式会社竹中工務店
             粕谷 貴司
-#          photo: b_01.jpg
+          photo: Takashi_Kasuya.jpg
       abstract: |-
-        調整中
+        2025年4月にスマートビルディング共創機構が設立されました。
+        スマートビルについては、技術的にもビジネス的にも様々な課題が顕在化していますが、100社を超える会員企業が、普及とエコシステムの構築に向けて活動を進めています。
+        これらの状況を俯瞰するとともに、竹中工務店が目指すスマートビルについて、事例含めて紹介させていただきます。
 
-        キーワード: **SmartBuilding**, **Technical**, **Activity**      
+        キーワード: **SmartBuilding**, **Technical**, **Activity**
     - title: オープンソース半導体を研究ツールとして利用しよう！
       time: "18:30"
       type: BoF
