an extra comma removed.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -149,7 +149,7 @@
         さらに、電力の効率化やグリーン電力を積極利用することで、大量に消費される電力を賄う試みも多数行われている。 
         なぜ分散しないといけないのか、そのためにはどのような効率的な分散基盤が必要なのかについてのトヨタのR&D活動について解説する。
 
-        キーワード: **AI**, **GPU基盤**,, **Kubernetes**, **グリーン電力**       
+        キーワード: **AI**, **GPU基盤**, **Kubernetes**, **グリーン電力**       
 #      slides:
 #        - link: https://www.onic.jp
     - title: 脱・テキストベースの管理 ― 内製で挑むIPアドレス管理システムの取り組み
