matsubayashi-san's session info added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -155,19 +155,19 @@
         キーワード: **内製**, **IPアドレス**, **管理**       
 #      slides:
 #        - link: https://www.onic.jp
-    - title: 調整中
+    - title: AI時代ならではのデータセンターや電力需給等における課題と解決に向けたこれからのインフラのあり方（ワット・ビット構想に関する考察を含む）について
       time: "14:30"
       type: 講演
       tag: s_06
       presenters:
         - name_and_title: |-
-            title: 調整中<br />
-            name: 調整中
+            NTTドコモビジネス株式会社<br />
+            松林 修
 #          photo: s_06.png
       abstract: |-
-        abstract: 調整中
+        近年、企業の競争力向上の観点から生成AI等のAI導入が急速に普及し、機密性の高いデータを用いたAI環境構築等が進展するとともに全国の事業拠点において推論用AIの本格的導入が見込まれます。一方、AI向けインフラにおいて、都市部データセンター用電力の枯渇、建設コスト増大、電力（受電）導入の長期化などを背景に、ICT環境の分散化やネットワークの在り方などにも変化が生じています。電力枯渇やデジタル赤字、ワット・ビット構想実現や課題解決に向けて、実態や、解決すべき道筋は何か。NTTドコモビジネスの取組みやこれからのインフラのあり方について講演します。
 
-        キーワード: **ONIC**, **ONIC**, **ONIC**       
+        キーワード: **TBD**, **TBD**, **TBD**      
 #      slides:
 #        - link: https://www.onic.jp
     - title: ピアノ演奏
