hayashi-san's session info added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -253,7 +253,7 @@
       abstract: |-
 
         キーワード: **岡優里**, **ピアノ**, **演奏**, **A社長**      
-    - title: BOSCOのAIOps
+    - title: 通信事業会社におけるミッションクリティカルな業務で活用するAIOpsに挑戦 - BOSCO Technologies が挑戦する AIOpS -
       time: "17:30"
       type: 講演
       tag: s_10
@@ -263,9 +263,16 @@
             林 經正
 #          photo: s_10.png
       abstract: |-
-        abstract: 調整中
+        昨今、ITインフラ運用やITサービス運用における情報漏洩や人為ミスが、企業経営に甚大なリスクをもたらしています。従来の特権ID管理だけでは、このリスクを完全に解消できていません。また、高度なオペレーション技術を持つ人材の確保が難しいという課題も深刻です。
 
-        キーワード: **ONIC**, **ONIC**, **ONIC**       
+        本発表では、こうした課題を解決し、ミッションクリティカルな業務にまでAIOps（AIを活用した運用）の適用を可能にする、ボスコ・テクノロジーズ独自のソリューションをご紹介します。
+        自社製品「SMART Gateway」に「AIエージェントプラグイン」を組み合わせることで、AIが人間に代わってミッションクリティカルな業務を自動で、かつ安全に実行します。
+
+        このソリューションは、既に大手通信事業会社において、ネットワーク機器のNAT設定変更やセキュリティパッチ適用といった重要業務での成功実績があります。
+        
+        ボスコ・テクノロジーズならではのAIOpsが、どのようにして運用リスクを大幅に低減し、安定したサービス提供を実現するのか、具体的な事例を交えてご説明します。
+
+        キーワード: **生成AI**, **AIOps**, **SSL/TCPプロキシ**, **ガードレール**       
 #      slides:
 #        - link: https://www.onic.jp
     - title: SIMアプレットによる"使いやすい"ローカル5G実現への取り組み
