Add 2nd presentator to NTT sponsor session

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -284,6 +284,10 @@
             NTTドコモビジネス株式会社<br />
             山田 悠也
           photo: s_11.JPG
+        - name_and_title: |-
+            NTTドコモビジネス株式会社<br />
+            末永 翔磨
+          photo: s_11_2.png
       abstract: |-
         SIMアプレットは、SIMカードの中で動作する小さなプログラムです。
         SIMカードのもつセキュリティ性の高さやUEへの依存性の少なさといった特長を活かすことができるため、
