hayashi-san's session info updated.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -261,16 +261,11 @@
         - name_and_title: |-
             株式会社ボスコ・テクノロジーズ<br />
             林 經正
-#          photo: s_10.png
+          photo: Tsunemasa_Hayashi.jpg
       abstract: |-
-        昨今、ITインフラ運用やITサービス運用における情報漏洩や人為ミスが、企業経営に甚大なリスクをもたらしています。従来の特権ID管理だけでは、このリスクを完全に解消できていません。また、高度なオペレーション技術を持つ人材の確保が難しいという課題も深刻です。
+        近年、ITインフラや通信サービスの運用現場では、情報漏洩や人為的ミスによる重大なインシデントが相次ぎ、企業経営に深刻なリスクをもたらしています。しかし、従来のアクセス管理や特権ID管理の仕組みを導入するだけでは、運用の現場で求められる安全性と正確性を十分に確保することは困難です。
 
-        本発表では、こうした課題を解決し、ミッションクリティカルな業務にまでAIOps（AIを活用した運用）の適用を可能にする、ボスコ・テクノロジーズ独自のソリューションをご紹介します。
-        自社製品「SMART Gateway」に「AIエージェントプラグイン」を組み合わせることで、AIが人間に代わってミッションクリティカルな業務を自動で、かつ安全に実行します。
-
-        このソリューションは、既に大手通信事業会社において、ネットワーク機器のNAT設定変更やセキュリティパッチ適用といった重要業務での成功実績があります。
-        
-        ボスコ・テクノロジーズならではのAIOpsが、どのようにして運用リスクを大幅に低減し、安定したサービス提供を実現するのか、具体的な事例を交えてご説明します。
+        本講演では、アクセス制御・監査・自動化を統合した運用基盤にAIエージェントを組み合わせ、**人の判断や操作をAIが補完・監督するAIOpsアーキテクチャ**を紹介します。この仕組みにより、通信事業会社における**NAT設定変更やセキュリティパッチ適用といったミッションクリティカルな業務**を、安全かつ確実に遂行することが可能となりました。運用リスクの低減と作業品質の均一化を両立する、次世代のAIOps基盤のアプローチを、実運用での成果とともに紹介します。
 
         キーワード: **生成AI**, **AIOps**, **SSL/TCPプロキシ**, **ガードレール**       
 #      slides:
