shindo's slide added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -58,6 +58,8 @@
         SDNのHype Cycleを一通り経験した者の視点から振り返ってみたいと思います。
 
         キーワード: **SDN**, **Nicira**, **NSX**
+      slides:
+        - link: https://drive.google.com/file/d/1bGWBcBWDfB90PK1mArcqp9uSSDsG8hrW/view
     - title: 閉会
       time: "20:00"
 - date: November 7, 2025 (本会議@メインホール)
