Ogura-san's slide link added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -228,8 +228,8 @@
         現在、生成AIはあらゆる産業における仕事の生産性を大きく向上させています。 AIは単なるチャットシステムにとどまらず、システムをまたいで推論・計画・実行できる自律型エージェントへと進化しつつあります。 また複数エージェントが連携し合う、マルチエージェントシステムでは、より高度な意思決定プロセスを可能にすることが期待されます。 本セッションではAgentic AIにおける基本的なコンセプトをご紹介しながら、複数エージェントがオープンに相互運用できる世界(Internet of Agent) について展望します。
 
         キーワード: **AI**, **IoA**
-#      slides:
-#        - link: https://www.onic.jp
+      slides:
+        - link: https://drive.google.com/file/d/1sV3drdeRBYI2glSkzvoz0mVv28QPo8cI/view
     - title: 30分で理解する生成AI 最新技術動向と今後の要点
       time: "16:30"
       type: 講演
