Fuchigami-san's slide link added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -87,8 +87,8 @@
         いわゆる、サイバーセキュリティに関する環境は激しく変転し、重要なシステムが瓦解するかのような被害も報道される中、サイバーセキュリティをどう捉え、理解すれば良いのか、変化する時代と共にかわるその本質についてお話しします。
 
         キーワード: **Security**
-#      slides:
-#        - link: https://www.onic.jp
+      slides:
+        - link: https://drive.google.com/file/d/1Car1QrwT_AhRf-4K8PoI0kxO-XscR20S/view
     - title: スマートビルについて（その技術的側面と発展、普及活動について）
       time: "11:00"
       type: 講演
