Hayashi-san's slide link added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -272,8 +272,8 @@
         本講演では、アクセス制御・監査・自動化を統合した運用基盤にAIエージェントを組み合わせ、**人の判断や操作をAIが補完・監督するAIOpsアーキテクチャ**を紹介します。この仕組みにより、通信事業会社における**NAT設定変更やセキュリティパッチ適用といったミッションクリティカルな業務**を、安全かつ確実に遂行することが可能となりました。運用リスクの低減と作業品質の均一化を両立する、次世代のAIOps基盤のアプローチを、実運用での成果とともに紹介します。
 
         キーワード: **生成AI**, **AIOps**, **SSL/TCPプロキシ**, **ガードレール**       
-#      slides:
-#        - link: https://www.onic.jp
+      slides:
+        - link: https://drive.google.com/file/d/1ikz02Ybsh9T9hz1NdmsV095zyFdw4GB-/view
     - title: SIMアプレットによる"使いやすい"ローカル5G実現への取り組み
       time: "18:00"
       type: スポンサーセッション
