Imamura-san's slide link changed to ONIC goodle drive.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -20,7 +20,7 @@
 
         キーワード: **OpenSource**, **Semiconductor**, **ASIC**
       slides:
-        - link: https://ishi-kai.org/assets/presentation/event/202511/ISHI-KAI_ONIC_202511.pdf
+        - link: https://drive.google.com/file/d/1bwmnMtB1UDHnwoJv41gevQxloki5w_Ig/view
     - title: 究極のゼロトラストを目指して
       time: "18:30"
       type: BoF
