Google Analytids configured.

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ sass:
   style: compressed
   source_dir: _sass
 
-#google_analytics: UA-code-here
+google_analytics: G-GTHPEEV9S4
 
 defaults:
   -
