--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@
   link: https://x.com/Onic_japan
 - name: Archives
   dropdown:
+    - name: ONIC 2025
+      link: /archives/2025/
     - name: ONIC 2024
       link: /archives/2024/  
     - name: ONIC 2023
